Make sure that all of the panels under SherpaConsolePanelbox have left-aligned text

--- a/src/tibet/tools/sherpa/styles/sherpa_xctrls.less
+++ b/src/tibet/tools/sherpa/styles/sherpa_xctrls.less
@@ -145,6 +145,8 @@ xctrls|panelbox#SherpaConsolePanelbox {
 
         width: 100%;
         height: 100%;
+
+        text-align: left;
     }
 }
 
